<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/_2sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="@dimen/_8sdp"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/product_img"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_50sdp"
                android:scaleType="fitXY"
                android:src="@drawable/fruits"
                android:layout_margin="@dimen/_4sdp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_60sdp"
                android:fontFamily="@font/sfprodisplay_light"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/dialog" />

            <TextView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:text="@string/prices"
                android:textColor="@color/black"
                android:fontFamily="@font/sfpdisplaymedium"
                android:layout_marginTop="@dimen/_6sdp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_40sdp"
                android:text="@string/price"
                android:textColor="@color/black"
                android:fontFamily="@font/sfpdisplaymedium"
                android:layout_marginTop="@dimen/_6sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:background="@drawable/spinner_background"/>

            </LinearLayout>

            <Button
                android:id="@+id/add_cart"
                android:layout_width="@dimen/_38sdp"
                android:layout_height="@dimen/_20sdp"
                android:text="@string/add"
                android:padding="@dimen/_2sdp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_10sdp"
                android:layout_gravity="end"
                android:layout_margin="@dimen/_6sdp"
                android:background="@drawable/custom_btn"/>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>