<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.CategoryFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_14sdp"
                    android:src="@drawable/md_nav_back"
                    android:tint="@color/white" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_margin="@dimen/_14sdp"
                    android:tint="@color/white" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:orientation="vertical"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.1"
                android:src="@drawable/ic_chat" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/tell"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/share_txt"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:gravity="left"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp" />

        <LinearLayout
            android:layout_width="@dimen/_140sdp"
            android:layout_height="0.1dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@color/black"
            android:orientation="vertical"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/black"
            android:orientation="horizontal"
            android:weightSum="1">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="left"
                android:maxLines="1"
                android:paddingLeft="@dimen/_5sdp"
                android:text="@string/link"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/copy_link"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_margin="@dimen/_10sdp"
                    android:background="@color/colorPrimary"
                    android:text="Copy Link"
                    android:textAllCaps="true"
                    android:textColor="@color/white">

                </Button>

            </LinearLayout>


        </LinearLayout>

        //share

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_bg_share"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/refer"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

          <!--  <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="0.4"
                android:gravity="center|left"
                android:src="@drawable/ic_share" />-->

        </LinearLayout>

    </LinearLayout>


</LinearLayout>