<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.2">

                    <ImageView
                        android:id="@+id/product_img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/fruits" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/product_name"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:gravity="center_vertical"
                        android:text="@string/apple"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp">

                    </TextView>

                    <TextView
                        android:id="@+id/weight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/apple"
                        android:visibility="gone"
                        android:fontFamily="@font/opensans_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp">

                    </TextView>


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="@dimen/_6sdp"
                        android:background="@drawable/spinner_background"
                        android:visibility="gone" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:layout_marginBottom="@dimen/_6sdp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/opensans_regular"
                                android:text="@string/prices"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_12sdp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/opensans_regular"
                                    android:text="@string/pricess"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_12sdp" />

                                <TextView
                                    android:id="@+id/price"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/opensans_regular"
                                    android:text="@string/price"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_12sdp" />

                            </LinearLayout>




                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center|end"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:id="@+id/plus_minus"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_4sdp"
                                android:gravity="center"
                                android:visibility="gone">

                                <LinearLayout

                                    android:id="@+id/decriment"
                                    android:layout_width="@dimen/_24sdp"
                                    android:layout_height="@dimen/_24sdp"
                                    android:background="@drawable/custom_bg_add">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fontFamily="@font/opensans_regular"
                                        android:gravity="center"
                                        android:text="@string/minus"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="@dimen/_40sdp"
                                    android:layout_height="@dimen/_24sdp"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/quantity"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fontFamily="@font/opensans_regular"
                                        android:gravity="center"
                                        android:text="1"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                    <ProgressBar
                                        android:visibility="gone"
                                        android:id="@+id/progress_bar"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"/>


                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/increment"
                                    android:layout_width="@dimen/_24sdp"
                                    android:layout_height="@dimen/_24sdp"
                                    android:background="@drawable/custom_bg_add">

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:fontFamily="@font/opensans_regular"
                                        android:gravity="center"
                                        android:text="@string/plus"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_14sdp" />

                                </LinearLayout>

                            </LinearLayout>


                            <Button
                                android:id="@+id/add_cart"
                                android:layout_width="@dimen/_42sdp"
                                android:layout_height="@dimen/_24sdp"
                                android:background="@drawable/custom_btn"
                                android:text="@string/add"
                                android:visibility="visible"
                                android:textAllCaps="true"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_10sdp" />

                        </LinearLayout>


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/out_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_100sdp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:visibility="gone"
                android:fontFamily="@font/opensans_regular"
                android:background="@drawable/custom_bg_out"
                android:text="@string/out_of_stock"
                android:textSize="@dimen/_20sdp"/>


        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>